CMake first version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,14 @@
 cmake_minimum_required(VERSION 3.10)
 
-include("${CMAKE_BINARY_DIR}/conanbuildinfo.cmake")
-conan_basic_setup(NO_OUTPUT_DIRS)
+project(LLL)
+set(CMAKE_CXX_STANDARD 14)
 
-# Start writing your code here
+#include("${CMAKE_BINARY_DIR}/conanbuildinfo.cmake")
+#conan_basic_setup(NO_OUTPUT_DIRS)
+
+include_directories(.)
+
+add_executable(LLL
+        lll.cpp
+        Matrix.h
+        Vector.h)
