- One additional LLL test - Some files rearrangement

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,6 @@ add_executable(attacker
 add_dependencies(attacker LinearAlgebra)
 target_link_libraries(attacker LinearAlgebra)
 
-add_executable(tests vector_tests.cpp matrix_tests.cpp lll_tests.cpp Manger_tests.cpp)
+add_executable(tests vector_tests.cpp matrix_tests.cpp lll_tests.cpp Manger_tests.cpp Vector.cpp lll.cpp)
 add_dependencies(tests googletest LinearAlgebra)
 target_link_libraries(tests gtest gtest_main LinearAlgebra)
