--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(ATtacker)
+project(attacker)
 set(CMAKE_CXX_STANDARD 14)
 
 include(ExternalProject)
@@ -9,9 +9,18 @@ set(EXTERNAL_INSTALL_LOCATION ${CMAKE_BINARY_DIR}/external)
 include_directories(${EXTERNAL_INSTALL_LOCATION}/include)
 link_directories(${EXTERNAL_INSTALL_LOCATION}/lib)
 
+ExternalProject_Add(googletest
+        GIT_REPOSITORY https://github.com/google/googletest.git
+        GIT_TAG master
+        SOURCE_DIR "${CMAKE_CURRENT_BINARY_DIR}/googletest-src"
+        BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}/googletest-build"
+        CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${EXTERNAL_INSTALL_LOCATION} -Dgtest_build_tests=OFF
+        UPDATE_DISCONNECTED true
+        )
+
+
 include_directories(.)
 
-# Library module
 add_library(LinearAlgebra SHARED
         lll.h
         Matrix.h
@@ -19,29 +28,15 @@ add_library(LinearAlgebra SHARED
         Manger.h
         Main.cpp)
 
+add_executable(attacker
+        Main.cpp
+        )
+
+add_dependencies(attacker LinearAlgebra)
+target_link_libraries(attacker LinearAlgebra)
+
+add_executable(tests vector_tests.cpp matrix_tests.cpp lll_tests.cpp Manger_tests.cpp lll.cpp)
+add_dependencies(tests googletest LinearAlgebra)
+target_link_libraries(tests gtest gtest_main LinearAlgebra)
+
 target_link_libraries(LinearAlgebra gmp gmpxx)
-
-# ATtacker module
-add_executable(ATtacker
-        Main.cpp)
-
-add_dependencies(ATtacker LinearAlgebra)
-# target_link_libraries(ATtacker LinearAlgebra)
-
-# Tests config
-include(cmake/googletest.cmake)
-fetch_googletest(
-        ${PROJECT_SOURCE_DIR}/cmake
-        ${PROJECT_BINARY_DIR}/googletest
-)
-enable_testing()
-
-# Test module
-add_executable(unit_tests vector_tests.cpp matrix_tests.cpp lll_tests.cpp Manger_tests.cpp lll.cpp)
-target_link_libraries(unit_tests LinearAlgebra gtest_main pthread)
-# add_test(NAME unit COMMAND ${CMAKE_BINARY_DIR}/unit_tests)
-
-include(GoogleTest)
-gtest_add_tests(TARGET unit_tests)
-
-
