--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(attacker)
+project(ATtacker)
 set(CMAKE_CXX_STANDARD 14)
 
 include(ExternalProject)
